# gwasy

./: pyproject.toml
src/gwasy/: __init__.py  cli.py  fetch_study_index.py  fetch_study_metadata.py
