[project]
name = "gwasy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Szymon Szyszkowski", email = "ss60@mib117351s.internal.sanger.ac.uk" },
]
requires-python = ">=3.10.14"
dependencies = [
    "pandas>=2.2.3",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "typer>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["types-requests>=2.32.0.20241016"]


[project.scripts]
gwasy = "gwasy.cli:main"


[tool.ruff]
line-length = 120
